<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.andresuryana.metembangbali.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/search"
        android:name="com.andresuryana.metembangbali.ui.main.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/explore"
        android:name="com.andresuryana.metembangbali.ui.main.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/profile"
        android:name="com.andresuryana.metembangbali.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>