<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signup.SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/screen_1"
        android:transitionName="@string/trans_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo_metembang"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo_metembang_white"
        android:transitionName="@string/trans_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="24dp"
        android:visibility="gone"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingBottom="64dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="32dp"
                android:fontFamily="@font/corbel_bold"
                android:text="@string/heading_sign_up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_complete_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corbel_bold"
                android:layout_marginHorizontal="32dp"
                android:text="@string/label_complete_name"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_complete_name"
                style="@style/MyTextInputLayout_NoHorizontalPadding"
                android:layout_marginHorizontal="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_complete_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_complete_name"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:labelFor="@id/til_complete_name"
                    android:paddingVertical="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="32dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/corbel_bold"
                android:text="@string/label_email"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/MyTextInputLayout_NoHorizontalPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="24dp"
                android:transitionName="@string/trans_input_email"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:labelFor="@id/til_email"
                    android:paddingVertical="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:fontFamily="@font/corbel_bold"
                android:text="@string/label_password"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/MyTextInputLayout_NoHorizontalPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="32dp"
                android:transitionName="@string/trans_input_password"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:labelFor="@id/til_password"
                    android:paddingVertical="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="32dp"
                android:elevation="0dp"
                android:fontFamily="@font/corbel_bold"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:transitionName="@string/trans_primary_button"
                app:cornerRadius="24dp"
                app:elevation="0dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:viewBindingIgnore="true">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/corbel"
                    android:text="@string/prompt_already_have_account"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/corbel_bold"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/btn_sign_in"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>