<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_usage_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/corbel_bold"
            android:text="@string/label_usage_type"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/top_navigation" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_usage_type"
            style="@style/MyTextInputLayout_NoHorizontalPadding.DropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/label_usage_type">

            <AutoCompleteTextView
                android:id="@+id/ac_usage_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/hint_usage_type"
                android:inputType="textNoSuggestions"
                android:labelFor="@id/til_email"
                android:paddingHorizontal="0dp"
                android:paddingVertical="12dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_usage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/corbel_bold"
            android:text="@string/label_usage"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/top_navigation" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_usage"
            style="@style/MyTextInputLayout_NoHorizontalPadding.DropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/label_usage">

            <AutoCompleteTextView
                android:id="@+id/ac_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/hint_usage"
                android:inputType="textNoSuggestions"
                android:labelFor="@id/til_email"
                android:paddingHorizontal="0dp"
                android:paddingVertical="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_mood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/corbel_bold"
            android:text="@string/label_mood"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/top_navigation" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mood"
            style="@style/MyTextInputLayout_NoHorizontalPadding.DropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/label_mood">

            <AutoCompleteTextView
                android:id="@+id/ac_mood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/hint_mood"
                android:inputType="textNoSuggestions"
                android:labelFor="@id/til_email"
                android:paddingHorizontal="0dp"
                android:paddingVertical="12dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_rule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/corbel_bold"
            android:text="@string/label_rule"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/top_navigation" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_rule"
            style="@style/MyTextInputLayout_NoHorizontalPadding.DropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/label_rule">

            <AutoCompleteTextView
                android:id="@+id/ac_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/hint_rule"
                android:inputType="textNoSuggestions"
                android:labelFor="@id/til_email"
                android:paddingHorizontal="0dp"
                android:paddingVertical="12dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/corbel_bold"
            android:text="@string/label_meaning"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_meaning"
            style="@style/MyTextInputLayout_NoHorizontalPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/label_meaning">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="top"
                android:hint="@string/hint_meaning"
                android:inputType="text|textMultiLine"
                android:labelFor="@id/til_category"
                android:paddingHorizontal="0dp"
                android:paddingVertical="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_lyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/corbel_bold"
            android:text="@string/label_lyrics_idn"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_description_lyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/corbel_italic"
            android:text="@string/description_label_lyrics"
            android:textSize="12sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lyrics_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_light_blue"
                android:fontFamily="@font/corbel_bold"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/btn_prev"
                android:textAllCaps="false"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/color_light_blue"
                app:cornerRadius="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:fontFamily="@font/corbel_bold"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/btn_next"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="24dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>